@@ -1,6 +1,8 @@
 2003-05-03  Henning Meier-Geinitz <henning@meier-geinitz.de>
 
 	* include/md5.h: Check for __attribute__ explicitely.
+	* backend/ibm.c backend/ibm-scsi.c doc/descriptions/ibm.desc:
+	  Disabled object_position. That should fix the Ricoh IS-420.
 
 2003-05-02  Henning Meier-Geinitz <henning@meier-geinitz.de>
 
